# libmultiprocess

./: .clangd  CMakeLists.txt  README.md  shell.nix
.github/workflows/: bitcoin-ci.yml  bitcoin-core-ci.yml  ci-support-trigger.yml  ci.yml
ci/: README.md
ci/configs/: gnu32.bash  olddeps.bash  sanitize.bash  tsan.bash  windows.bash
ci/patches/: capnproto-wine-invalid-function.patch
ci/scripts/: bitcoin_core_ci.sh  ci.sh  ci_helpers.sh  config.sh  run.sh  run_bitcoin_core_functional_tests.sh  run_bitcoin_core_unit_tests.sh  windows_native_test.ps1  windows_package.sh
cmake/: TargetCapnpSources.cmake  pthread_checks.cmake
doc/: usage.md  versions.md
example/: CMakeLists.txt  calculator.cpp  example.cpp  printer.cpp
include/mp/: proxy-io.h  proxy-types.h  proxy.capnp  proxy.h  type-char.h  type-chrono.h  type-context.h  type-data.h  type-string.h  type-threadmap.h  type-unordered-set.h  type-vector.h  util.h
lib/: CMakeLists.txt
lib/test/: CMakeLists.txt
src/mp/: gen.cpp  proxy.cpp  util.cpp
test/: CMakeLists.txt
test/mp/test/: connect_tests.cpp  foo-types.h  foo.capnp  foo.h  listen_tests.cpp  spawn_tests.cpp  test.cpp  unixlistener.h
